--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 <body>
 	<main class="cd-main-content">
 		<h1>Slide In Panel</h1>
-		<a href="#0" class="cd-btn js-cd-panel-trigger" data-panel="main">Fire Panel</a>
+		<a href="#0" class="cd-btn js-cd-panel-trigger">Fire Panel</a>
 		<!-- your content here -->
 	</main>
 
-	<div class="cd-panel cd-panel--from-right js-cd-panel-main">
-		<header class="cd-panel__header">
-			<h1>Title Goes Here</h1>
-			<a href="#0" class="cd-panel__close js-cd-close">Close</a>
-		</header>
+	<div class="cd-panel cd-panel--from-left js-cd-panel-main">
 
 		<div class="cd-panel__container">
+		  <header class="cd-panel__header">
+        <h2>Title Goes Here</h2>
+        <a href="#0" class="cd-panel__close js-cd-close">Close</a>
+		  </header>
 			<div class="cd-panel__content">
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam magnam accusamus obcaecati nisi eveniet quo veniam quibusdam veritatis autem accusantium doloribus nam mollitia maxime explicabo nemo quae aspernatur impedit cupiditate dicta molestias consectetur, sint reprehenderit maiores. Tempora, exercitationem, voluptate. Sapiente modi officiis nulla sed ullam, amet placeat, illum necessitatibus, eveniet dolorum et maiores earum tempora, quas iste perspiciatis quibusdam vero accusamus veritatis. Recusandae sunt, repellat incidunt impedit tempore iusto, nostrum eaque necessitatibus sint eos omnis! Beatae, itaque, in. Vel reiciendis consequatur saepe soluta itaque aliquam praesentium, neque tempora. Voluptatibus sit, totam rerum quo ex nemo pariatur tempora voluptatem est repudiandae iusto, architecto perferendis sequi, asperiores dolores doloremque odit. Libero, ipsum fuga repellat quae numquam cumque nobis ipsa voluptates pariatur, a rerum aspernatur aliquid maxime magnam vero dolorum omnis neque fugit laboriosam eveniet veniam explicabo, similique reprehenderit at. Iusto totam vitae blanditiis. Culpa, earum modi rerum velit voluptatum voluptatibus debitis, architecto aperiam vero tempora ratione sint ullam voluptas non! Odit sequi ipsa, voluptatem ratione illo ullam quaerat qui, vel dolorum eligendi similique inventore quisquam perferendis reprehenderit quos officia! Maxime aliquam, soluta reiciendis beatae quisquam. Alias porro facilis obcaecati et id, corporis accusamus? Ab porro fuga consequatur quisquam illo quae quas tenetur.</p>
 
